# ESP32_WROOM_IDF_Rebot_wifi

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
3D/开源机械臂(修改版3d机构件)/控制臂STL/: Arm Controller STEP FILES.SLDPRT
components/learning_controller/: CMakeLists.txt  learning_controller.c
components/learning_controller/include/: learning_controller.h
components/pca9685/: CMakeLists.txt  pca9685.c
components/pca9685/include/: pca9685.h
components/robotic_arm/: CMakeLists.txt  robotic_arm.c
components/robotic_arm/include/: robotic_arm.h
components/servo_controller/: CMakeLists.txt  servo_controller.c
components/servo_controller/include/: servo_controller.h
components/web_controller/: CMakeLists.txt  web_controller.c  web_controller.c.new  wifi_handlers.c
components/web_controller/include/: web_controller.h  web_controller_internal.h  wifi_handlers.h
components/web_controller/www/: index.html
main/: CMakeLists.txt  main.c
